# NEXTVM

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.github/ISSUE_TEMPLATE/: app_compatibility.yml  bug_report.yml  feature_request.yml
.github/workflows/: android-ci.yml  main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nextvm/app/: AppModule.kt  MainActivity.kt  NextVmApplication.kt
app/src/main/java/com/nextvm/app/fcm/: NextVmC2dmReceiver.kt  NextVmFcmService.kt
app/src/main/java/com/nextvm/app/stub/: StubComponents.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
core/apk/: build.gradle.kts
core/apk/src/main/java/com/nextvm/core/apk/: ApkParser.kt  VirtualClassLoader.kt
core/binder/: build.gradle.kts
core/binder/src/main/java/com/nextvm/core/binder/: BinderProxyManager.kt
core/common/: build.gradle.kts
core/common/src/main/java/com/nextvm/core/common/: AndroidCompat.kt  (+1 more)
core/designsystem/: build.gradle.kts
core/framework/: build.gradle.kts
core/hook/: build.gradle.kts
core/hook/src/main/cpp/: CMakeLists.txt  native-hook.cpp
core/model/: build.gradle.kts
core/sandbox/: build.gradle.kts
core/services/: build.gradle.kts
core/virtualization/: build.gradle.kts
feature/appmanager/: build.gradle.kts
feature/filemanager/: build.gradle.kts
feature/launcher/: build.gradle.kts
feature/settings/: build.gradle.kts
gradle/: libs.versions.toml
(+75 files in other folders)
